<resources>
    <string name="app_name">Instagram</string>
    <string name="action_settings">Settings</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">2ybEmLWYPo9nfIC8tCDoUH92DxDjIV4uUKXehblx</string>
    <string name="back4app_client_key">zdcWsAmI1H72WdaXsuHDmQxMZtpLE0pLLhvmpFPz</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nothing">nothing</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_user_list">User List</string>
    <string name="share">Share</string>
    <string name="title_activity_user_feed">User Feed</string>
    <string name="logout">Logout</string>
    <string name="linearLayout">linearLayout</string>


</resources>
